  - CurvePwAffineFactoryInterface renamed to CurvePwAffineFactory
  - CurvePwAffineUtils renamed to CurvePwAffineUtilsDispatch
  - LinearSegmentFactory renamed to LinearSegmentFactoryDispatch
  - NumFactory renamed to NumFactoryDispatch
  - NumFactoryInterface renamed to NumFactory
  - NumUtils renamed to NumUtilsDispatch
  - NumUtilsInterface renamed to NumUtils
* Renamed OperatorInputChecks to MinPlusInputChecks.
* Made LinearSegmentUtils an abstract class (it only provides static methods). 
* Reworked CalculatorConfig.java to singleton pattern (improves tests run time considerably).

v2.4.0beta1 "Chimera" (2017-Aug-02)
-----------------------------------
* An alternative curve backend for the DiscoDNC analyses:
  This release wraps the MPA RTC Toolbox's curve implementation to be used with the DiscoDNC. It continues the work presented at ECRTS 2017:
     Philipp Schon and Steffen Bondorf, Towards Unified Tool Support for Real-time Calculus & Deterministic Network Calculus.
  The required MPA RTC library is available at www.mpa.ethz.ch/Rtctoolbox/
* Package naming now complies with the Java rules. Our domain disco.cs.uni-kl.de translates to the package prefix de.uni_kl.cs.disco. 

v2.3.5 "Centaur" (2017-Jun-25)
------------------------------
* Network.java: 
  - Reduced amount of arrival curve copies.
  - SaveAs won't fail if the directory already exists.
* AnalysisResult.java:
  - Reduced visibility of delay and backlog bound variables from public to protected.
  - Get methods are public, set are protected (and overwritten by extending classes) so they are only accessed by the respective analysis.
* OutputTest.java: Catch and print potential exceptions thrown when loading and instantiating the just compiled test network class.
* Test documentation 2.0beta2
  - Update to new file naming scheme (see v2.3.3 changes).
  - Sources: LyX files updated to version 508 (requires LyX 2.2+). 

v2.3.4 "Centaur" (2017-May-19)
------------------------------